# rankedle

./: .dockerignore  .gitignore  Dockerfile  README.md  create_db.sh  docker-compose.yml  pyproject.toml
src/rankedle/: Dockerfile  bot.py  config.py  config.yaml  old_songs.json  song.py  songs.json  test.py
src/web/: Dockerfile  entrypoint.sh  initial_data.json  manage.py
src/web/RankedleWeb/: asgi.py  settings.py  urls.py  wsgi.py
src/web/SongManager/: admin.py  apps.py  models.py  signals.py  songs_to_adda.json  views.py
src/web/SongManager/migrations/: 0001_initial.py  0002_alter_map_options_alter_map_table.py  0003_alter_mapdifficulty_map_alter_mapdifficulty_stars.py  0004_alter_mapdifficulty_difficulty.py  0005_alter_mapdifficulty_map.py  0006_alter_mapdifficulty_map.py  0007_alter_mapdifficulty_difficulty_and_more.py  0008_alter_mapdifficulty_options_and_more.py  0009_alter_mapdifficulty_options_and_more.py  0010_alter_permittedname_map_fk.py  0011_alter_mapdifficulty_map.py  0012_alter_mapdifficulty_map.py  0013_alter_mapdifficulty_stars.py  0014_user_alter_mapdifficulty_stars_score.py  0015_alter_user_options_alter_user_table.py  0016_rename_map_fk_permittedname_map_and_more.py  0017_alter_mapdifficulty_stars.py
src/web/SongManager/static/: styles.css
src/web/SongManager/templates/: index.html
tests/: test_config.py
